--- a/user-interface/src/main/resources/templates/error.html
+++ b/user-interface/src/main/resources/templates/error.html
@@ -12,6 +12,7 @@
             margin-top: 50px;
         }
         .error-info {
+            display: inline-block;
             border: 1px solid;
             border-radius: 10px;
             padding: 10px;
@@ -34,7 +35,7 @@
     </style>
 </head>
 <body>
-    <div class="error-title">Service got an error!</div>
+    <div class="error-title">ERROR</div>
     <div class="error-info">
         <div th:if="${status}">
             <div class="error-status" th:text="${status}"></div>
@@ -43,6 +44,8 @@
             <div class="error-message" th:text="${message}"></div>
         </div>
     </div>
-    <a class="home-link" th:href="@{/}">Return to home page</a>
+    <div>
+        <a class="home-link" th:href="@{/}">Return to home page</a>
+    </div>
 </body>
 </html>
