Update html page

--- a/auth-server/src/main/resources/templates/login.html
+++ b/auth-server/src/main/resources/templates/login.html
@@ -52,7 +52,7 @@
                 font-size: 24px;
             }
             .registration-link {
-                color: white;
+                color: black;
                 text-decoration: none;
             }
         </style>
@@ -77,7 +77,7 @@
                 <input class="custom-submit" type="submit" value="Login">
             </div>
             <div class="registration">
-                Don't have an account? <a class="registration-link" th:href="@{/registration}">Signup</a>.
+                Don't have an account? <a class="registration-link" th:href="@{/registration}">Sign up</a>.
             </div>
         </form>
     </body>
