--- a/auth-server/src/main/resources/templates/registration.html
+++ b/auth-server/src/main/resources/templates/registration.html
@@ -52,7 +52,7 @@
                 font-size: 24px;
             }
             .sign-in-link {
-                color: white;
+                color: black;
                 text-decoration: none;
             }
             .no-dots {
