--- a/user-interface/src/main/resources/templates/error.html
+++ b/user-interface/src/main/resources/templates/error.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div>
-        <a class="home-link" th:href="@{/}">Return to home page</a>
+        <a class="home-link" th:href="@{${issuerUri}}">Return to issuer page</a>
     </div>
 </body>
 </html>
