--- a/auth-server/src/main/resources/templates/error.html
+++ b/auth-server/src/main/resources/templates/error.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div>
-        <a class="home-link" th:href="@{${issuerUri ?: '/'}}">Return to issuer page</a>
+        <a class="home-link" th:href="@{${path ?: '/'}}">Return to issuer page</a>
     </div>
 </body>
 </html>
