Apply some cosmetic changes

--- a/user-interface/src/main/resources/templates/index.html
+++ b/user-interface/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
                 text-align: right;
             }
             .logout-link {
-                color: white;
+                color: black;
                 text-decoration: none;
             }
             .main-title {
@@ -64,7 +64,7 @@
                 margin: 0px 0px 5px 0px;
             }
             .download-link {
-                color: white;
+                color: black;
                 font-size: 48px;
                 text-decoration: none;
             }
