--- a/user-interface/src/main/resources/templates/logout.html
+++ b/user-interface/src/main/resources/templates/logout.html
@@ -19,7 +19,7 @@
                 text-align: right;
             }
             .back-link {
-                color: white;
+                color: black;
                 text-decoration: none;
             }
             .main-title {
